--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ six==1.16.0
 smmap==5.0.1
 soupsieve==2.5
 streamlit==1.35.0
+streamlit-lottie==0.0.5
 tenacity==8.3.0
 toml==0.10.2
 toolz==0.12.1
